#2787 Tidy up.